Wired up notification list template

--- a/src/app/notifications/notification-list/notification-list.component.html
+++ b/src/app/notifications/notification-list/notification-list.component.html
@@ -1,1 +1,9 @@
-<p>notification-list works!</p>
+<!-- messages is an Observable, need "async" pipe to wait for emitted values -->
+<div
+  *ngFor="let message of messages | async"
+  class="alert"
+  [ngClass]="message.type === 'error' ? 'alert-danger' : 'alert-success'"
+>
+  {{ message.text }}
+  <button class="close" (click)="clearMessage(message.id)">x</button>
+</div>
